Update connection string to work in VM

--- a/FinalProject/Web.config
+++ b/FinalProject/Web.config
@@ -65,7 +65,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="FinalEntities" connectionString="metadata=res://*/FinalProjectModel.csdl|res://*/FinalProjectModel.ssdl|res://*/FinalProjectModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=N252-025\MSSQLSERVER3;initial catalog=Final;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="FinalEntities" connectionString="metadata=res://*/FinalProjectModel.csdl|res://*/FinalProjectModel.ssdl|res://*/FinalProjectModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=WINDEV2104EVAL;initial catalog=Final;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
